--- a/Dockerfile.pgpool
+++ b/Dockerfile.pgpool
@@ -22,18 +22,16 @@ RUN apt-get update \
       postgresql-$PG_MAJOR-repack \
       postgresql-$PG_MAJOR-pgpool2\
  && rm -rf /var/lib/apt/lists/* \
- && mkdir -p /docker-entrypoint-initdb.d \
- # Setup directory for supervisor.conf
- && mkdir -p /run/sshd
+ && mkdir -p /docker-entrypoint-initdb.d
 
 # Install additional scripts. These are run in abc order during initial start
 COPY ./scripts/initdb-postgis.sh /docker-entrypoint-initdb.d/10_postgis.sh
-COPY ./scripts/setup-0-pgaudit.sh /docker-entrypoint-initdb.d/setup-0-pgaudit.sh
-COPY ./scripts/setup-1-pgBadger.sh /docker-entrypoint-initdb.d/setup-1-pgBadger.sh
-COPY ./scripts/setup-3-pg_repack.sh /docker-entrypoint-initdb.d/setup-3-pg_repack.sh
-COPY ./scripts/setup-4-pgstatstatements.sh /docker-entrypoint-initdb.d/setup-4-pgstatstatements.sh
-COPY ./scripts/setup-5-pmm.sh /docker-entrypoint-initdb.d/setup-5-pmm.sh
-COPY ./scripts/setup-dbs.sh /docker-entrypoint-initdb.d/setup-dbs.sh
+COPY ./scripts/setup-0-pgaudit.sh /docker-entrypoint-initdb.d/
+COPY ./scripts/setup-1-pgBadger.sh /docker-entrypoint-initdb.d/
+COPY ./scripts/setup-3-pg_repack.sh /docker-entrypoint-initdb.d/
+COPY ./scripts/setup-4-pgstatstatements.sh /docker-entrypoint-initdb.d/
+COPY ./scripts/setup-5-pmm.sh /docker-entrypoint-initdb.d/
+COPY ./scripts/setup-dbs.sh /docker-entrypoint-initdb.d/
 
 # Install scripts to be run after DB initialization
 COPY ./scripts/update-postgis.sh /usr/local/bin/update-postgis.sh
@@ -48,6 +46,6 @@ RUN chmod +x /docker-entrypoint-initdb.d/setup-0-pgaudit.sh \
       /docker-entrypoint-initdb.d/setup-dbs.sh \
       /usr/local/bin/setup-parse-index.sh
 
-EXPOSE 5432 22
-
+USER postgres
 CMD ["postgres", "-c", "shared_preload_libraries=pgaudit"]
+EXPOSE 22
