--- a/.github/workflows/build-pgpool.yml
+++ b/.github/workflows/build-pgpool.yml
@@ -3,6 +3,8 @@ name: build-pgpool
 on:
   pull_request:
     branches: [ main ]
+  merge_group:
+     branches: [ main ]
 
 env:
   REGISTRY: docker.io
