--- a/.github/workflows/build-pgpool.yml
+++ b/.github/workflows/build-pgpool.yml
@@ -16,7 +16,7 @@ concurrency:
 
 jobs:
   docker:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
