--- a/.github/workflows/release-pgpool.yml
+++ b/.github/workflows/release-pgpool.yml
@@ -57,7 +57,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           file: Dockerfile.pgpool
-          platforms: linux/amd64, linux/arm64/v8, linux/ppc64le
+          platforms: linux/amd64, linux/arm64/v8
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
