--- a/Dockerfile.pgpool
+++ b/Dockerfile.pgpool
@@ -21,6 +21,7 @@ RUN apt-get update \
       postgresql-$PG_MAJOR-set-user \
       postgresql-$PG_MAJOR-repack \
       postgresql-$PG_MAJOR-pgpool2\
+      postgresql-$PG_MAJOR-pgrouting \
  && rm -rf /var/lib/apt/lists/* \
  && mkdir -p /docker-entrypoint-initdb.d
 
@@ -47,5 +48,5 @@ RUN chmod +x /docker-entrypoint-initdb.d/setup-0-pgaudit.sh \
       /usr/local/bin/setup-parse-index.sh
 
 USER postgres
-CMD ["postgres", "-c", "shared_preload_libraries=pgaudit"]
+CMD ["postgres", "-c", "shared_preload_libraries=pg_stat_statements,pgaudit,pg_cron"]
 EXPOSE 22
