--- a/Dockerfile.pgpool
+++ b/Dockerfile.pgpool
@@ -20,8 +20,9 @@ RUN apt-get update \
       postgresql-$PG_MAJOR-pgaudit \
       postgresql-$PG_MAJOR-set-user \
       postgresql-$PG_MAJOR-repack \
-      postgresql-$PG_MAJOR-pgpool2\
+      postgresql-$PG_MAJOR-cron \
       postgresql-$PG_MAJOR-pgrouting \
+      postgresql-$PG_MAJOR-pgpool2\
  && rm -rf /var/lib/apt/lists/* \
  && mkdir -p /docker-entrypoint-initdb.d
 
