--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         restart: always
         ports:
             - 127.0.0.1:${DB_PORT}:${DB_PORT}
-        # Uncomment volumes below to persist postgres data. Make sure to change directory to store data locally
+        # Uncomment volumes below to persist PostgreSQL data. Make sure to change the directory to store data locally
    #     volumes:
    #         - /My/Encrypted/Drive/data:/var/lib/postgresql/18/docker #Mount your own drive, be sure to change 18 to your respective postgres version
    #         - /My/Encrypted/Drive/archivedir:/var/lib/postgresql/archivedir #Mount your own drive
@@ -23,6 +23,6 @@ services:
         ports:
             - 127.0.0.1:1080:${PMM_PORT} # Unsecure connections
             - 127.0.0.1:1443:${PMM_TLS_PORT} # Secure connections
-        # Uncomment volumes below to persist postgres data. Make sure to change directory to store data locally
+        # Uncomment volumes below to persist monitor data. Make sure to change the directory to store data locally
     #    volumes:
     #        - /My/Encrypted/Drive/srv:/srv
